--- a/pages/user-profile-detail/user-profile-detail.wxss
+++ b/pages/user-profile-detail/user-profile-detail.wxss
@@ -1,1 +1,130 @@
-/* pages/user-profile-detail/user-profile-detail.wxss */
+.pagecontainer.container {
+  padding: 20rpx 0;
+}
+.uppersection {
+  display: flex;
+  height: 350rpx;
+  flex-direction: column;
+  align-items: center;
+  padding: 20rpx;
+  background-color: #fff;
+}
+.avatarcontainer {
+  width: 160rpx;
+  height: 160rpx;
+  border-radius: 50%;
+  box-shadow: 0 0 10rpx rgba(0, 0, 0, 0.2);
+  margin-top: 50rpx;
+  margin-bottom: 40rpx;
+  border: 3px solid rgba(255, 255, 255, 0.9);
+}
+.avatar {
+  width: 96%;
+  height: 96%;
+  border-radius: 48%;
+}
+.defaultavatar {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: rgb(240, 240, 243);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.changeavatarbtn {
+  padding: 15rpx 0rpx;
+  background-color: rgba(22, 119, 255, 0.06);
+  color: rgb(22, 119, 255);
+  border-radius: 20rpx;
+  font-size: 30rpx;
+}
+.lowersection {
+  margin: 40rpx 20rpx;
+  padding: 20rpx;
+  height: 30rpx;
+}
+.infocontainer {
+  background-color: #fff;
+  border-radius: 10rpx;
+  box-shadow: 0 0 10rpx rgba(0, 0, 0, 0.1);
+  padding: 20rpx;
+}
+.infoitem {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 20rpx;
+  border-bottom: 1rpx solid #e0e0e0;
+  padding-bottom: 30rpx;
+  height: 120rpx;
+}
+.label {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 20rpx;
+  font-weight: bold;
+}
+.function-icon {
+  width: 40rpx;
+  height: 40rpx;
+  margin-right: 20rpx;
+}
+.icon {
+  margin-right: 10rpx;
+}
+.value {
+  margin-top: 19rpx;
+  width: 100%;
+  font-size: 28rpx;
+}
+.editbtn {
+  margin-top: 50rpx;
+  margin-bottom: 30rpx;
+  padding: 10rpx 20rpx;
+  background-color: #1677ff; /* 深蓝色按钮 */
+  box-shadow: rgba(22, 119, 255, 0.2) 0px 4px 12px;
+  color: #fff; /* 白色字体 */
+  border: none;
+  border-radius: 20rpx;
+  font-size: 30rpx;
+  width: 100%;
+}
+.edit-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10rpx;
+}
+.cancel-btn {
+  padding: 5rpx;
+  background-color: #e0e0e0;
+  color: #333;
+  border: none;
+  border-radius: 15rpx;
+  font-size: 28rpx;
+  margin-top: 40rpx;
+  margin-bottom: 30rpx;
+}
+.null-btn {
+  padding: 5rpx;
+  background-color: #fff;
+  border: none;
+}
+.save-btn {
+  padding: 5rpx;
+  background-color: #007AFF;
+  color: #fff;
+  border: none;
+  border-radius: 15rpx;
+  font-size: 28rpx;
+  margin-top: 40rpx;
+  margin-bottom: 30rpx;
+}
+input.value {
+  background-color: rgb(249, 251, 255);
+  padding: 10rpx;
+  border: none;
+  border-radius: 15rpx;
+  margin-top: 5rpx;
+}
