消息通知页面

--- a/pages/notifications/notifications.wxml
+++ b/pages/notifications/notifications.wxml
@@ -1,2 +1,40 @@
-<!--pages/notifications/notifications.wxml-->
-<text>pages/notifications/notifications.wxml</text>
+<view class="notifications-container">
+  <view class="tab-bar">
+    <view class="tab-item {{activeTab === 'all'? 'active' : ''}}" bindtap="filteredNotifications" data-type="all">
+      全部
+      <view class="badge" wx:if="{{unreadCount.all > 0}}">{{unreadCount.all}}</view>
+    </view>
+    <view class="tab-item {{activeTab ==='system'? 'active' : ''}}" bindtap="filteredNotifications" data-type="system">
+      系统通知
+      <view class="badge" wx:if="{{unreadCount.system > 0}}">{{unreadCount.system}}</view>
+    </view>
+    <view class="tab-item {{activeTab ==='reminder'? 'active' : ''}}" bindtap="filteredNotifications" data-type="reminder">
+      消息提醒
+      <view class="badge" wx:if="{{unreadCount.reminder > 0}}">{{unreadCount.reminder}}</view>
+    </view>
+  </view>
+
+  <view class="notification-list">
+    <view class="notification-item" wx:for="{{filteredNotifications}}" wx:key="id" 
+      class="{{item.isUnread? 'unread-bg' : 'read-bg'}}" bindtap="handleNotificationTap" data-index="{{index}}" data-notification-id="{{item.id}}">
+      <view class="red-dot" wx:if="{{item.isUnread}}"></view>
+      <view class="icon-wrapper">
+        <image src="{{item.iconPath}}" class="icon" wx:if="{{item.type ==='system' && item.isUnread}}"></image>
+        <image src="{{item.iconPath}}" class="icon" wx:elif="{{item.type ==='reminder' && item.isUnread}}"></image>
+        <image src="{{item.iconPath}}" class="icon" wx:else></image>
+      </view>
+      <view class="content-wrapper">
+        <view class="title">{{item.title}}</view>
+        <view class="time">{{item.time}}</view>
+        <view class="desc">{{item.desc}}</view>
+      </view>
+      <navigator url="###" class="arrow-icon">
+        <image src="/assets/icons/RightOutline_32px.svg" class="function-icon"></image>
+      </navigator>
+    </view>
+  </view>
+
+  <view class="tail">
+    <text class="read-all" bindtap="markAllAsRead">全部已读</text>
+  </view>
+</view>
