按钮组件支持显示自定义图标

--- a/components/custom-button/custom-button.wxss
+++ b/components/custom-button/custom-button.wxss
@@ -42,3 +42,13 @@
   border-color: #409eff; /* 按下时保持边框颜色 */
   color: #409eff; /* 按下时保持文字颜色 */
 } 
+
+.icon{
+  height: 40rpx;
+  width: 40rpx;
+  margin-right: 16rpx;
+}
+
+.primary-icon{
+  filter: brightness(1000%);
+}
