--- a/components/custom-button/custom-button.wxml
+++ b/components/custom-button/custom-button.wxml
@@ -2,6 +2,8 @@
   <view class="custom-button {{ type }}" 
         hover-class="button-hover-{{ type }}" 
         bindtap="handleTap">
+    <image src="{{iconPath}}" class="{{type === 'primary' ? 'primary-icon': ''}}  icon" 
+           wx:if="{{iconPath !== ''}}"></image>
     {{ text }}
   </view>
 </view> 
