--- a/pages/notifications/notifications.wxss
+++ b/pages/notifications/notifications.wxss
@@ -12,7 +12,6 @@
   color: #1677ff;
   font-size: 14px;
   margin-top: 20rpx;
-  margin-left: 300px;
 }
 
 .tab-bar {
@@ -135,8 +134,49 @@
 }
 
 .tail {
+  display: block;
+  width: calc(100% - 24px);
+  margin: 16px 12px;
+  padding: 12px 0px;
+  background: rgb(255, 255, 255);
+  border: 1px solid rgb(22, 119, 255);
+  border-radius: 8px;
+  color: rgb(22, 119, 255);
+  font-size: 15px;
+  text-align: center;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.delete-btn{
+  position: relative;
+  padding: 20rpx 30rpx;
+  background-color: red;
+  color: white;
+  border-radius: 20rpx;
+}
+
+.no-message-tip {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  padding: 50px 0;
+  text-align: center;
+}
+.icon-wrapper {
+  margin-bottom: 20px;
+}
+.empty-icon {
+  width: 80rpx;
+  height: 80rpx;
+}
+.text-wrapper.title {
+  font-size: 18px;
+  color: #666;
   margin-bottom: 10px;
+}
+.text-wrapper.desc {
+  font-size: 14px;
+  color: #999;
 }
