--- a/pages/report/report.wxml
+++ b/pages/report/report.wxml
@@ -1,2 +1,94 @@
 <!--pages/report/report.wxml-->
-<text>pages/report/report.wxml</text>
+<view class="root">
+  <view class="tabBar">
+    <view>
+      <view class="wx:if={{selectedType === 'week' ? 'lightTabItem' : ''}} tabItem" bind:tap="InterfaceSwitch" data-type="week">本周数据</view>
+    </view>
+    <view>
+      <view class="wx:if={{selectedType === 'month' ? 'lightTabItem' : ''}} tabItem" bind:tap="InterfaceSwitch" data-type="month">本月数据</view>
+    </view>
+  </view>
+
+  <view class="practiceData">
+    <view class="dataItem"
+          wx:for="{{Current.WeekList}}"
+          wx:key="index"
+    >
+      <view class="itemTitle">{{item.type}}</view>
+      <view class="itemValue">{{item.value}}</view>
+      <view class="wx:if={{item.statetype === 'down' ? 'itemStateRed' : ''}} itemState" >{{item.state}}</view>
+    </view>
+  </view>
+
+  <view class="enhance">
+    <view class="Titles">
+      <view>
+        <image src="/assets/icons/SetOutline_32px.svg" class="titleIcons"></image>
+      </view>
+      <view>待加强项</view>
+    </view>
+    <view class="enhanceContent">
+      <view class="enhanceItems">
+        <view class="enhanceItem"
+              wx:for="{{Current.enhanceItems}}"
+              wx:key="index"
+        >
+          {{item}}
+        </view>
+      </view>
+      <view>
+        <custom-button text="生成针对性练习" type="primary" width="100%"></custom-button>
+      </view>
+    </view>
+  </view>
+
+  <view class="grasps">
+    <view class="Titles">
+      <view>
+        <image src="/assets/icons/GoodOutline_32px.svg" class="titleIcons"></image>
+      </view>
+      <view>各类型掌握程度</view>
+    </view>
+    <view class="graspsItems"
+          wx:for="{{Current.graspsList}}"
+          wx:key="index"
+    >
+      <view class="itemTitle">
+        <view class="itemName">{{item.type}}（{{item.number}}题）</view>
+        <view class="itemPercent">{{item.ratio}}</view>
+      </view>
+      <view class="graspsBlack">
+        <view class="{{item.best ? 'graspsFillBest' : ''}} graspsFill" style="width: {{item.ratio}};"></view>
+      </view>
+    </view>
+  </view>
+
+  <view class="advice">
+    <view class="Titles">
+      <view>
+        <image src="/assets/icons/StarOutline_32px.svg" class="titleIcons"></image>
+      </view>
+      <view>学习建议</view>
+    </view>
+    <view class="adviceContent">
+      <view class="adviceItems"
+            wx:for="{{Current.adviceList}}"
+            wx:key="index"
+      >
+        <view>
+          <image src="{{item.iconPath}}" class="adviceIcons"></image>
+        </view>
+        <view>
+          <view class="adviceItemsTitles">{{item.title}}</view>
+          <view class="adviceItemsText">{{item.content}}</view>
+        </view>
+      </view>
+    </view>
+  </view>
+
+  <view class="interactButtons">
+    <view><custom-button text="分享报告" type="secondary" width="100%" iconPath="/assets/icons/StarOutline_32px.svg"></custom-button></view>
+    <view><custom-button text="下载报告" type="primary" width="100%" iconPath="/assets/icons/DownOutline_32px.svg"></custom-button></view>
+  </view>
+
+</view>
