--- a/pages/settings/settings.wxss
+++ b/pages/settings/settings.wxss
@@ -1,1 +1,94 @@
-/* pages/settings/settings.wxss */
+.settings-container {
+  padding: 10px;
+  background-color: #f5f5f5;
+}
+.setting-item {
+  padding: 15px 30rpx;
+  border-bottom: 1px solid #e5e5e5;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+}
+.label {
+  font-size: 16px;
+}
+.value {
+  font-size: 16px;
+  margin-left: auto;
+  color: #666;
+  margin-right: 20rpx;
+}
+.section-title {
+  margin: 20px 10px 10px;
+  font-size: 18px;
+  color: #999;
+}
+.switch {
+  transform: scale(0.8);
+}
+.navigate-arrow {
+  width: 20px;
+  height: 20px;
+  background: url('arrow-right.png') no-repeat center;
+  background-size: contain;
+}
+.arrow-icon {
+  width: 40rpx;
+  height: 40rpx;
+}
+.function-icon {
+  width: 40rpx;
+  height: 40rpx;
+  margin-right: 20rpx;
+}
+.modal {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  z-index: 999;
+  height: 48%;
+  border-radius: 30rpx 30rpx;
+}
+.mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: 998;
+}
+.modal-content {
+  padding: 10px;
+}
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #e5e5e5;
+  padding: 10px;
+}
+.btn {
+  color: #007aff;
+}
+.title {
+  font-size: 16px;
+}
+.modal-body {
+  margin-top: 30rpx;
+  max-height: 300px;
+  overflow-y: auto;
+  width: 100%;
+  text-align: center;
+  font-size: 50rpx;
+}
+.modal-body picker-view {
+  height: 200px; 
+}
+.picker-view-column view {
+  text-align: center;
+  line-height: 200px; 
+}
