修复了消息页面手机端不显示的bug

--- a/pages/notifications/notifications.wxml
+++ b/pages/notifications/notifications.wxml
@@ -15,7 +15,7 @@
   </view>
 
   <view class="notification-list">
-    <view class="notification-item" wx:for="{{filteredNotifications}}" wx:key="id" 
+    <view wx:for="{{filteredNotifications}}" wx:key="id" 
           class="{{item.isUnread? 'unread-bg' :'read-bg'}}" 
           bindtouchstart="handleTouchStart"
           bindtouchmove="handleTouchMove"
